ExprParser.py
# Generated from Expr.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'{'", "'}'", "','", "'='", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'print'", "'read'", "'toint'", "'toreal'", "<INVALID>", 
                     "'function'", "'if'", "'else'", "'while'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NEWLINE", 
                      "ADDSUBSIGN", "MULDIVSIGN", "COND_OP", "PRINT", "READ", 
                      "TOINT", "TOREAL", "TYPE", "FUNCTION", "IF", "ELSE", 
                      "WHILE", "INT", "REAL", "ID", "WS" ]

    RULE_prog = 0
    RULE_block = 1
    RULE_blockif = 2
    RULE_blockelse = 3
    RULE_blockwhile = 4
    RULE_blockfunc = 5
    RULE_func = 6
    RULE_namefunc = 7
    RULE_paramsfunc = 8
    RULE_paramfunc = 9
    RULE_stat = 10
    RULE_cond = 11
    RULE_expr = 12
    RULE_expr_follow = 13
    RULE_value = 14

    ruleNames =  [ "prog", "block", "blockif", "blockelse", "blockwhile", 
                   "blockfunc", "func", "namefunc", "paramsfunc", "paramfunc", 
                   "stat", "cond", "expr", "expr_follow", "value" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    NEWLINE=7
    ADDSUBSIGN=8
    MULDIVSIGN=9
    COND_OP=10
    PRINT=11
    READ=12
    TOINT=13
    TOREAL=14
    TYPE=15
    FUNCTION=16
    IF=17
    ELSE=18
    WHILE=19
    INT=20
    REAL=21
    ID=22
    WS=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(ExprParser.BlockContext,0)


        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = ExprParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.block()
            self.state = 31
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.NEWLINE)
            else:
                return self.getToken(ExprParser.NEWLINE, i)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatContext,i)


        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.FuncContext)
            else:
                return self.getTypedRuleContext(ExprParser.FuncContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = ExprParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4921344) != 0):
                self.state = 35
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [11, 12, 17, 19, 22]:
                    self.state = 33
                    self.stat()
                    pass
                elif token in [16]:
                    self.state = 34
                    self.func()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 37
                self.match(ExprParser.NEWLINE)
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockifContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(ExprParser.BlockContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_blockif

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockif" ):
                listener.enterBlockif(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockif" ):
                listener.exitBlockif(self)




    def blockif(self):

        localctx = ExprParser.BlockifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_blockif)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockelseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(ExprParser.BlockContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_blockelse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockelse" ):
                listener.enterBlockelse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockelse" ):
                listener.exitBlockelse(self)




    def blockelse(self):

        localctx = ExprParser.BlockelseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_blockelse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockwhileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(ExprParser.BlockContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_blockwhile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockwhile" ):
                listener.enterBlockwhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockwhile" ):
                listener.exitBlockwhile(self)




    def blockwhile(self):

        localctx = ExprParser.BlockwhileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_blockwhile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockfuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.NEWLINE)
            else:
                return self.getToken(ExprParser.NEWLINE, i)

        def getRuleIndex(self):
            return ExprParser.RULE_blockfunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockfunc" ):
                listener.enterBlockfunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockfunc" ):
                listener.exitBlockfunc(self)




    def blockfunc(self):

        localctx = ExprParser.BlockfuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_blockfunc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4855808) != 0):
                self.state = 50
                self.stat()
                self.state = 51
                self.match(ExprParser.NEWLINE)
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(ExprParser.FUNCTION, 0)

        def TYPE(self):
            return self.getToken(ExprParser.TYPE, 0)

        def namefunc(self):
            return self.getTypedRuleContext(ExprParser.NamefuncContext,0)


        def blockfunc(self):
            return self.getTypedRuleContext(ExprParser.BlockfuncContext,0)


        def paramsfunc(self):
            return self.getTypedRuleContext(ExprParser.ParamsfuncContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc" ):
                listener.enterFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc" ):
                listener.exitFunc(self)




    def func(self):

        localctx = ExprParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(ExprParser.FUNCTION)
            self.state = 59
            self.match(ExprParser.TYPE)
            self.state = 60
            self.namefunc()
            self.state = 61
            self.match(ExprParser.T__0)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 7364610) != 0):
                self.state = 62
                self.paramsfunc()


            self.state = 65
            self.match(ExprParser.T__1)
            self.state = 66
            self.match(ExprParser.T__2)
            self.state = 67
            self.blockfunc()
            self.state = 68
            self.match(ExprParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamefuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_namefunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamefunc" ):
                listener.enterNamefunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamefunc" ):
                listener.exitNamefunc(self)




    def namefunc(self):

        localctx = ExprParser.NamefuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_namefunc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(ExprParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsfuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramfunc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ParamfuncContext)
            else:
                return self.getTypedRuleContext(ExprParser.ParamfuncContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_paramsfunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamsfunc" ):
                listener.enterParamsfunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamsfunc" ):
                listener.exitParamsfunc(self)




    def paramsfunc(self):

        localctx = ExprParser.ParamsfuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paramsfunc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.paramfunc()
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 73
                self.match(ExprParser.T__4)
                self.state = 74
                self.paramfunc()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamfuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(ExprParser.ValueContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_paramfunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamfunc" ):
                listener.enterParamfunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamfunc" ):
                listener.exitParamfunc(self)




    def paramfunc(self):

        localctx = ExprParser.ParamfuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paramfunc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExprParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PrintContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PRINT(self):
            return self.getToken(ExprParser.PRINT, 0)
        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)


    class ReadContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def READ(self):
            return self.getToken(ExprParser.READ, 0)
        def TYPE(self):
            return self.getToken(ExprParser.TYPE, 0)
        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRead" ):
                listener.enterRead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRead" ):
                listener.exitRead(self)


    class WhileContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(ExprParser.WHILE, 0)
        def cond(self):
            return self.getTypedRuleContext(ExprParser.CondContext,0)

        def blockwhile(self):
            return self.getTypedRuleContext(ExprParser.BlockwhileContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)


    class IfContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(ExprParser.IF, 0)
        def cond(self):
            return self.getTypedRuleContext(ExprParser.CondContext,0)

        def blockif(self):
            return self.getTypedRuleContext(ExprParser.BlockifContext,0)

        def ELSE(self):
            return self.getToken(ExprParser.ELSE, 0)
        def blockelse(self):
            return self.getTypedRuleContext(ExprParser.BlockelseContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf" ):
                listener.enterIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf" ):
                listener.exitIf(self)


    class AssignContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ExprParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)



    def stat(self):

        localctx = ExprParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stat)
        self._la = 0 # Token type
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                localctx = ExprParser.PrintContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.match(ExprParser.PRINT)
                self.state = 83
                self.expr(0)
                pass
            elif token in [22]:
                localctx = ExprParser.AssignContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.match(ExprParser.ID)
                self.state = 85
                self.match(ExprParser.T__5)
                self.state = 86
                self.expr(0)
                pass
            elif token in [12]:
                localctx = ExprParser.ReadContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 87
                self.match(ExprParser.READ)
                self.state = 88
                self.match(ExprParser.TYPE)
                self.state = 89
                self.match(ExprParser.ID)
                pass
            elif token in [17]:
                localctx = ExprParser.IfContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 90
                self.match(ExprParser.IF)
                self.state = 91
                self.cond()
                self.state = 92
                self.match(ExprParser.T__2)
                self.state = 93
                self.blockif()
                self.state = 94
                self.match(ExprParser.T__3)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==18:
                    self.state = 95
                    self.match(ExprParser.ELSE)
                    self.state = 96
                    self.match(ExprParser.T__2)
                    self.state = 97
                    self.blockelse()
                    self.state = 98
                    self.match(ExprParser.T__3)


                pass
            elif token in [19]:
                localctx = ExprParser.WhileContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 102
                self.match(ExprParser.WHILE)
                self.state = 103
                self.cond()
                self.state = 104
                self.match(ExprParser.T__2)
                self.state = 105
                self.blockwhile()
                self.state = 106
                self.match(ExprParser.T__3)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ValueContext)
            else:
                return self.getTypedRuleContext(ExprParser.ValueContext,i)


        def COND_OP(self):
            return self.getToken(ExprParser.COND_OP, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_cond

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCond" ):
                listener.enterCond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCond" ):
                listener.exitCond(self)




    def cond(self):

        localctx = ExprParser.CondContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_cond)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.value()
            self.state = 111
            self.match(ExprParser.COND_OP)
            self.state = 112
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExprParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class To_expr_followContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr_follow(self):
            return self.getTypedRuleContext(ExprParser.Expr_followContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTo_expr_follow" ):
                listener.enterTo_expr_follow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTo_expr_follow" ):
                listener.exitTo_expr_follow(self)


    class AddsubContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)

        def ADDSUBSIGN(self):
            return self.getToken(ExprParser.ADDSUBSIGN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddsub" ):
                listener.enterAddsub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddsub" ):
                listener.exitAddsub(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExprParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = ExprParser.To_expr_followContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 115
            self.expr_follow(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 122
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ExprParser.AddsubContext(self, ExprParser.ExprContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 117
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 118
                    self.match(ExprParser.ADDSUBSIGN)
                    self.state = 119
                    self.expr(2) 
                self.state = 124
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Expr_followContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExprParser.RULE_expr_follow

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class To_valueContext(Expr_followContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.Expr_followContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def value(self):
            return self.getTypedRuleContext(ExprParser.ValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTo_value" ):
                listener.enterTo_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTo_value" ):
                listener.exitTo_value(self)


    class MuldivContext(Expr_followContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.Expr_followContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr_follow(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.Expr_followContext)
            else:
                return self.getTypedRuleContext(ExprParser.Expr_followContext,i)

        def MULDIVSIGN(self):
            return self.getToken(ExprParser.MULDIVSIGN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMuldiv" ):
                listener.enterMuldiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMuldiv" ):
                listener.exitMuldiv(self)



    def expr_follow(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExprParser.Expr_followContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 26
        self.enterRecursionRule(localctx, 26, self.RULE_expr_follow, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = ExprParser.To_valueContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 126
            self.value()
            self._ctx.stop = self._input.LT(-1)
            self.state = 133
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ExprParser.MuldivContext(self, ExprParser.Expr_followContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr_follow)
                    self.state = 128
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 129
                    self.match(ExprParser.MULDIVSIGN)
                    self.state = 130
                    self.expr_follow(2) 
                self.state = 135
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExprParser.RULE_value

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ParContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPar" ):
                listener.enterPar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPar" ):
                listener.exitPar(self)


    class TointContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TOINT(self):
            return self.getToken(ExprParser.TOINT, 0)
        def value(self):
            return self.getTypedRuleContext(ExprParser.ValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterToint" ):
                listener.enterToint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitToint" ):
                listener.exitToint(self)


    class TorealContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

